==> Kyuubi0323/TIL/docs/3.2inch_16BIT_Module_ILI9341_MRB3205_V1.0/1-Demo/Demo_STM32/Demo_Apollo_STM32F429IGT6_8&16_BIT_FSMC/HARDWARE/LCD/lcd.c <==
#include "lcd.h"
#include "stdlib.h"
#include "delay.h"

u16 LCD_read(void)
{
	vu16 data;
	data=LCD->LCD_RAM;	
#if LCD_USE8BIT_MODEL
	return (data>>8);  
#else
	return data;
#endif
}

void LCD_WR_REG(u16 data)
{ 
	data=data;		//使用-O2优化的时候,必须插入的延时
#if LCD_USE8BIT_MODEL
	LCD->LCD_REG=(data<<8); //写入要写的寄存器序号
#else
	LCD->LCD_REG=data; //写入要写的寄存器序号
#endif	 
}

void LCD_WR_DATA(u16 data)
{
	data=data;			//使用-O2优化的时候,必须插入的延时
#if LCD_USE8BIT_MODEL
	LCD->LCD_RAM=(data<<8);//写入要写的数据
#else
	LCD->LCD_RAM=data; //写入要写的数据
#endif		
}

void Lcd_WriteData_16Bit(u16 Data)
{
#if LCD_USE8BIT_MODEL	
	 LCD->LCD_RAM = Data;
	 LCD->LCD_RAM = Data<<8;  //写十六位颜色值
#else
	 LCD->LCD_RAM = Data;  //写十六位颜色值
#endif
}

void LCD_GPIOInit(void)
{
	GPIO_InitTypeDef GPIO_Initure;
	FMC_NORSRAM_TimingTypeDef FSMC_ReadWriteTim;
	FMC_NORSRAM_TimingTypeDef FSMC_WriteTim;
	
	__HAL_RCC_GPIOB_CLK_ENABLE();			//开启GPIOB时钟
  GPIO_Initure.Pin=GPIO_PIN_5;            //PB5,背光控制
  GPIO_Initure.Mode=GPIO_MODE_OUTPUT_PP;  //推挽输出
  GPIO_Initure.Pull=GPIO_PULLUP;          //上拉
  GPIO_Initure.Speed=GPIO_SPEED_HIGH;     //高速
  HAL_GPIO_Init(GPIOB,&GPIO_Initure); 
        
  SRAM_Handler.Instance=FMC_NORSRAM_DEVICE;        //BANK1
  SRAM_Handler.Extended=FMC_NORSRAM_EXTENDED_DEVICE;       
        
  SRAM_Handler.Init.NSBank=FMC_NORSRAM_BANK1;     //使用NE1
  SRAM_Handler.Init.DataAddressMux=FMC_DATA_ADDRESS_MUX_DISABLE;  //不复用数据线
  SRAM_Handler.Init.MemoryType=FMC_MEMORY_TYPE_SRAM;              //SRAM
  SRAM_Handler.Init.MemoryDataWidth=FMC_NORSRAM_MEM_BUS_WIDTH_16; //16位数据宽度
  SRAM_Handler.Init.BurstAccessMode=FMC_BURST_ACCESS_MODE_DISABLE; //是否使能突发访问,仅对同步突发存储器有效,此处未用到
  SRAM_Handler.Init.WaitSignalPolarity=FMC_WAIT_SIGNAL_POLARITY_LOW;//等待信号的极性,仅在突发模式访问下有用
  SRAM_Handler.Init.WaitSignalActive=FMC_WAIT_TIMING_BEFORE_WS;   //存储器是在等待周期之前的一个时钟周期还是等待周期期间使能NWAIT
  SRAM_Handler.Init.WriteOperation=FMC_WRITE_OPERATION_ENABLE;    //存储器写使能
  SRAM_Handler.Init.WaitSignal=FMC_WAIT_SIGNAL_DISABLE;           //等待使能位,此处未用到
  SRAM_Handler.Init.ExtendedMode=FMC_EXTENDED_MODE_ENABLE;        //读写使用不同的时序
  SRAM_Handler.Init.AsynchronousWait=FMC_ASYNCHRONOUS_WAIT_DISABLE;//是否使能同步传输模式下的等待信号,此处未用到
  SRAM_Handler.Init.WriteBurst=FMC_WRITE_BURST_DISABLE;           //禁止突发写
  SRAM_Handler.Init.ContinuousClock=FMC_CONTINUOUS_CLOCK_SYNC_ASYNC;
        
  //FSMC读时序控制寄存器
  FSMC_ReadWriteTim.AddressSetupTime=0x0F;        //地址建立时间(ADDSET)为15个HCLK 1/180M*15=5.5ns*15=82.5ns
  FSMC_ReadWriteTim.AddressHoldTime=0x00;
  FSMC_ReadWriteTim.DataSetupTime=0x46;           //数据保存时间(DATAST)为70个HCLK	=5.5*70=385ns
  FSMC_ReadWriteTim.AccessMode=FMC_ACCESS_MODE_A; //模式A
  //FSMC写时序控制寄存器
  FSMC_WriteTim.AddressSetupTime=0x0F;            //地址建立时间(ADDSET)为15个HCLK=82.5ns
  FSMC_WriteTim.AddressHoldTime=0x00;
  FSMC_WriteTim.DataSetupTime=0x0F;               //数据保存时间(DATAST)为5.5ns*15个HCLK=82.5ns
  FSMC_WriteTim.AccessMode=FMC_ACCESS_MODE_A;     //模式A
  HAL_SRAM_Init(&SRAM_Handler,&FSMC_ReadWriteTim,&FSMC_WriteTim);	
	//重新配置写时序控制寄存器的时序使WR时序为最快   	 							    
  FSMC_WriteTim.AddressSetupTime=4;      
  FSMC_WriteTim.DataSetupTime=5;         
  FMC_NORSRAM_Extended_Timing_Init(SRAM_Handler.Extended,&FSMC_WriteTim,SRAM_Handler.Init.NSBank,SRAM_Handler.Init.ExtendedMode);
}
